@@ -1,3 +1,7 @@
+2007-09-03  Oliver Hader  <oh@inpublica.de>
+
+	* (trivial) Moving t3lib_TCEforms_inline::getJSON() to t3lib_div::array2json()
+
 2007-08-31  Michael Stucki  <michael@typo3.org>
 
 	* (trivial) Cleanup of NEWS.txt
